<resources>
    <string name="app_name">MySL</string>
    <string name="search_button">Search</string>
    <string name="offer_button">Offer</string>
    <string name="overview_button">Overview</string>
    <string name="specifysearch_button">Specify search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="category">Category</string>
    <string name="price">Price (in SEK)</string>
    <string name="pickupplace">Pick up place</string>
    <string name="pickupdate">Pick up date</string>
    <string name="saldo">Saldo (in SEK)</string>
    <string name="flexibledates">Flexible dates</string>
    <string name="additionalinformation">Additional information</string>
    <string name="offercard_button">Offer card</string>

    <string name="menu_search">Search</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_editprofile">Edit profile</string>
    <string name="menu_support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="categories">
        <item>Regular</item>
        <item>Student</item>
        <item>Reduced</item>
    </string-array>

    <string-array name="dateformats">
        <item>dd/mm/yyyy</item>
        <item>mm/dd/yyyy</item>
        <item>yyyy-mm-dd</item>
    </string-array>

    <string name="fb_login_protocol_scheme">fbAPP_ID</string>

    <string name="facebook_app_id">1797722383817790</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
