<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search"
            />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_menu_action_add"
            android:title="@string/menu_offer" />
        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/ic_menu_editprofile"
            android:title="@string/menu_editprofile" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
